--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -1,17 +1,31 @@
-.sidebar {
-  background-color: #f8f9fa;
+.admin-container {
+  display: flex;
   height: 100vh;
 }
 
-.sidebar ul {
+.sidebar {
+  background-color: #f2f2f2;
+  width: 200px;
   padding: 20px;
 }
 
-.sidebar .nav-link {
-  color: #495057;
-  font-weight: bold;
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-.sidebar .nav-link:hover {
-  background-color: #e9ecef;
+.sidebar ul li {
+  margin-bottom: 10px;
+}
+
+.sidebar ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
+.content {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #fff;
 }
