--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,19 +1,11 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="sidebar">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/admin/create">Create Job</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/admin/update">Update Job</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-md-9">
-      <router-outlet></router-outlet>
-    </div>
+<div class="admin-container">
+  <div class="sidebar">
+    <ul>
+      <li><a routerLink="/admin/add">Add User</a></li>
+      <li><a routerLink="/admin/update">Update User</a></li>
+    </ul>
+  </div>
+  <div class="content">
+    <router-outlet></router-outlet>
   </div>
 </div>
