--- a/src/app/components/admin/update/update.component.html
+++ b/src/app/components/admin/update/update.component.html
@@ -63,7 +63,7 @@
         <option value="user">User</option>
       </select>
     </div>
-    <button type="submit">Update</button>
+    <button type="submit" (click)="updateuser()">Update</button>
     <button type="button" (click)="hideUpdatePopup()">Cancel</button>
   </form>
 </div>
