--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,5 @@
 section{
-  padding: 3%;
+  padding: 0 3%;
 }
 form{
   width: 100%;
@@ -80,7 +80,7 @@ color: white;
 .tablec>div{
   display: flex;
   width: 100%;
-  height: 15%;
+  height: 10%;
 
 }
 .tablec h3{
@@ -120,13 +120,15 @@ color: white;
 
 .buttoncon {
   width: 100%;
+  gap: 30px;
   display: flex;
   padding: 1%;
-  justify-content: space-between;
+  justify-content: center;
+
 
 }
 .buttoncon button{
-  width: 7vw;
+  width: 3vw;
   height: 4vh;
   border-radius: 10px;
   background-color: transparent;
@@ -136,6 +138,7 @@ color: white;
   justify-content: center;
   align-items: center;
   transition: 0.3s;
+  font-size: 30px;
 }
 .buttoncon button:hover{
   color: white;
@@ -216,5 +219,20 @@ color: white;
 .noclick h1 {
   font-size: 18px;
   color: #999;
+}
+.admin{
+  float:right;
+  margin-bottom: 30px;
+  padding: 5px;
+  height: 50px;
+  width: 100px;
+  background-color: transparent;
+  border-radius: 5px;
+  font-weight: 500;
+  box-shadow: 0 16px 38px 0 rgba(0, 0, 0, .22), 0 4px 4px 0 rgba(0, 0, 0, .18);
+}
+.admin:hover{
+  background-color:rgb(49, 49, 49);
+  color: white;
 }
 
