--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <section>
+  <!-- <button class="admin" routerLink="/admin">admin</button> -->
   <form action="">
     <div>
       <label for="cilent">Client :</label>
@@ -20,8 +21,7 @@
       <label for="nom">Nom Per :</label>
     <input type="search" (input)="search()" name="nom" [(ngModel)]="nom"  id="nom">
     </div>
-    <input type="submit" (click)="search()" value="search">
-  </form>
+    </form>
   <div class="content">
     <div *ngIf="tab!=null" class="tablec table table-hover">
       <div>
@@ -43,8 +43,8 @@
         <span>{{item.dataDeNascimento}}</span>
       </div>
       <div class="buttoncon">
-        <button (click)="previousPage()"> &LeftArrow; previous </button>
-        <button (click)="nextPage()"> next &rightarrow; </button>
+        <button (click)="previousPage()"> &LeftArrow;  </button>
+        <button (click)="nextPage()">  &rightarrow; </button>
       </div>
     </div>
        <!-- <table *ngIf="tab!=null" class="tablec table table-hover">
